--- a/cppreference/_old/01.Language/10. Templates.md
+++ b/cppreference/_old/01.Language/10. Templates.md
@@ -52,7 +52,7 @@
     template<C3<int> T>    struct s4; // constraint-expression is C3<T, int>
     template<C3<int>... T> struct s5; // constraint-expression is (C3<T, int> && ...)
     ```
-- **Template template patemeter**
+- **Template template parameter**
   - `template <parameter-list> type-parameter-key name`
   - `template <parameter-list> type-parameter-key = default`
   - `template <parameter-list> type-parameter-key... name`
@@ -332,7 +332,7 @@
               // deduced T = bool, deduced A = const bool
               // deduced A is more cv-qualified than A
         ```
-     2. `A` がポインタ型なら、`A` に CV を付与した型を候補にする
+     2. `P` がポインタ型なら、`A` に CV を付与した型を候補にする
         ```C++
         template<typename T>
         void f(const T*);
